@@ -212,6 +212,8 @@ AP_DECLARE(gid_t) ap_gname2id(const char *name);
 int initgroups(const char *name, gid_t basegid);
 #endif
 
+#if !defined(WIN32) || defined(DOXYGEN)
+
 typedef struct ap_pod_t ap_pod_t;
 
 struct ap_pod_t {
@@ -254,6 +256,8 @@ AP_DECLARE(apr_status_t) ap_mpm_pod_signal(ap_pod_t *pod);
  * @param num The number of child processes to kill
  */
 AP_DECLARE(void) ap_mpm_pod_killpg(ap_pod_t *pod, int num);
+
+#endif /* !WIN32 || DOXYGEN */
 
 /**
  * Check that exactly one MPM is loaded
